--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "export PORT=5678 && rollup -c -w",
     "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "start:dev": "sirv public --single --dev",
+    "sk" : "rollup"
   }
 }
