--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "build": "rollup -c",
     "dev": "export PORT=5679 && rollup -c -w",
     "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev",
-  }
+    "start:dev": "sirv public --single --dev"
+ }
 }
